# mfcc

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
source/librosa/: filters.cpp  filters.h
source/librosa/core/: convert.cpp  convert.h  spectrum.cpp  spectrum.h
source/librosa/feature/: spectral.cpp  spectral.h
source/librosa/utils/: files.cpp  files.h  utils.cpp  utils.h
source/numpy/: init.h
source/numpy/core/: function_base.cpp  function_base.h  multiarray.cpp  multiarray.h  numeric.cpp  numeric.h
source/numpy/fft/: _pocketfft.c  _pocketfft.h  pocketfft.cpp  pocketfft.h
source/numpy/lib/: arraypad.cpp  arraypad.h
source/scipy/fft/_pocketfft/: helper.h  pocketfft_hdronly.h
source/scipy/fftpack/: realtransforms.cpp  realtransforms.h
source/scipy/signal/windows/: windows.cpp  windows.h
source/tool/: compare.py  print.h
